Se agregaron comentarios, se modifico index

--- a/index.html
+++ b/index.html
@@ -80,23 +80,23 @@
     <template id="templateCarrito">
         <tr>
             <th scope="row">id</th>
-            <td>cafe</td>
-            <td>1</td>
+            <td>titulo</td>
+            <td>cantidad</td>
             <td>
                 <button class="btn btn-info btn-sm">+</button>
                 <button class="btn btn-danger btn-sm">-</button>
             </td>
-            <td>$ <span>500</span></td>
+            <td>$ <span>precio</span></td>
         </tr>
     </template>
 
     <template id="templateFooter">
         <th scope="row" colspan="2">Total Productos</th>
-        <td>10</td>
+        <td>cantidad total</td>
         <td>
             <button class="btn btn-danger btn-sm" id="vaciarCarrito">vaciar todo</button>
         </td>
-        <td class="font-weight-bold">$ <span>5000</span></td>
+        <td class="font-weight-bold">$ <span>precio total</span></td>
     
     </template>
 
