--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="fomrularioContacto container">
             <form action="" class="formulario" >
                 <label for="nombre">Nombre</label>
-                <input type="text" id="nombre" rerequired>
+                <input type="text" id="nombre" required>
 
                 <label for="contacto">Numero de contacto</label>
                 <input type="number" id="numero" required>
