--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="bg">
-            <h1 class="lc">Dolce Burgres</h1>
+            <h1 class="lc">Dolce Burges</h1>
         </div>
     </header>
 
